<resources>
    <string name="app_name">Flexify</string>
    <string name="add_btn">Añadir</string>
    <string name="exercice_name">Ejercicio</string>
    <string name="exercice_reps">Reps</string>
    <string name="exercice_duration">Tiempo</string>
    <string name="your_objetives">Tus objetivos</string>
    <string name="your_routines">Tus rutinas</string>
    <string name="dietas_txt">Tus dietas</string>
    <string name="btn_next">Siguiente</string>
    <string name="routine_name">Nombre</string>
    <string name="objetive_description">Descripción:</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="nueva_dieta_txt">Nueva Dieta</string>
    <string name="meta_objetivo_txt">Meta:</string>
    <string name="dia_text">Dia</string>
    <string name="objetivo_cumplido_text">Cumplido</string>
    <string name="objetivo_text">Objetivo</string>
    <string name="rutina_text">Rutina</string>

    <string-array name="lista_dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>

</resources>