<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".RoutineInfoFragment"
    app:defaultNavHost="true"
    app:navGraph="@navigation/nav_graph">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        >

        <TextView
            android:id="@+id/routine_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold"

            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"

            >

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/exercice_name"
                android:textSize="20sp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nº veces"
                android:textSize="15sp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercice_reps"

                android:textSize="15sp"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exercices1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exercice_name1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_reps1"
                android:layout_width="40dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_time1"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"


                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exercices2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exercice_name2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_reps2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_time2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exercices3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exercice_name3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_reps3"
                android:layout_width="40dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_time3"
                android:layout_width="40dp"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exercices4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exercice_name4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_reps4"
                android:layout_width="40dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_time4"
                android:layout_width="40dp"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exercices5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exercice_name5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_reps5"
                android:layout_width="40dp"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/exercice_time5"
                android:layout_width="40dp"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"

                />

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        >
        <Button
            android:id="@+id/btn_eliminarRutina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/btn_eliminar"
            >
        </Button>
    </LinearLayout>


</LinearLayout>